infra/configs/base/egress/github/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-ghcr.io
  namespace: egress-system
spec:
  host: ghcr.io.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: ghcr.io
      targetPort: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-api.github.com
  namespace: egress-system
spec:
  host: api.github.com.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: api.github.com
      targetPort: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-github.githubassets.com
  namespace: egress-system
spec:
  host: github.githubassets.com.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: github.githubassets.com
      targetPort: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-raw.githubusercontent.com
  namespace: egress-system
spec:
  host: raw.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: raw.githubusercontent.com
      targetPort: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-objects.githubusercontent.com
  namespace: egress-system
spec:
  host: objects.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: objects.githubusercontent.com
      targetPort: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-release-assets.githubusercontent.com
  namespace: egress-system
spec:
  host: release-assets.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: release-assets.githubusercontent.com
      targetPort: 443
