infra/configs/base/egress/github/github-main.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: github.com
  namespace: egress-system
spec:
  exportTo: ["*"]
  hosts:
    - github.com
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
    - number: 22
      name: ssh
      protocol: TCP
  resolution: DNS
---
########### HTTPS traffic to github.com ###########
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-github.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github.com
      port: 443
  hostnames:
    - github.com
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: github.com.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-github.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - github.com.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
# Encapsulate the egress traffic into CONNECT tunnel to forward all traffic to it.
# Applies to HTTPS traffic to github.com.
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-https-github.com
  namespace: egress-system
spec:
  host: github.com.encapsulated-https.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: github.com
      targetPort: 443
---
########### SSH traffic to github.com ###########
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: direct-to-encapsulated-ssh-github.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github.com
      port: 22
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: github.com.encapsulated-ssh.egress-gateway.mesh.internal
          port: 22
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-ssh-github.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - github.com.encapsulated-ssh.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 22
      name: ssh
      protocol: TCP
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
# Encapsulate the egress traffic into CONNECT tunnel to forward all traffic to it.
# Applies to SSH traffic to github.com.
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: encapsulate-ssh-github.com
  namespace: egress-system
spec:
  host: github.com.encapsulated-ssh.egress-gateway.mesh.internal
  exportTo: ["."]
  trafficPolicy:
    tunnel:
      protocol: CONNECT
      targetHost: github.com
      targetPort: 22
