infra/configs/base/egress/github/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-api.github.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github-others
      port: 443
  hostnames:
    - api.github.com
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: api.github.com.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-ghcr.io
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github-others
      port: 443
  hostnames:
    - ghcr.io
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: ghcr.io.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-github.githubassets.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github-others
      port: 443
  hostnames:
    - github.githubassets.com
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: github.githubassets.com.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-raw.githubusercontent.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github-others
      port: 443
  hostnames:
    - raw.githubusercontent.com
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: raw.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-objects.githubusercontent.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github-others
      port: 443
  hostnames:
    - objects.githubusercontent.com
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: objects.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: direct-to-encapsulated-https-release-assets.githubusercontent.com
  namespace: egress-system
spec:
  parentRefs:
    - kind: ServiceEntry
      group: networking.istio.io
      name: github-others
      port: 443
  hostnames:
    - release-assets.githubusercontent.com
  rules:
    - backendRefs:
        - kind: Hostname
          group: networking.istio.io
          name: release-assets.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
          port: 443
