infra/configs/base/egress/github/serviceentries.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: github-others
  namespace: egress-system
spec:
  exportTo: ["*"]
  hosts:
    - ghcr.io
    - api.github.com
    - github.githubassets.com
    - raw.githubusercontent.com
    - objects.githubusercontent.com
    - release-assets.githubusercontent.com
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-ghcr.io
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - ghcr.io.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-api.github.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - api.github.com.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-github.githubassets.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - github.githubassets.com.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-raw.githubusercontent.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - raw.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-objects.githubusercontent.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - objects.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: encapsulated-https-release-assets.githubusercontent.com
  namespace: egress-system
spec:
  exportTo: ["."]
  hosts:
    - release-assets.githubusercontent.com.encapsulated-https.egress-gateway.mesh.internal
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
      targetPort: 7890
  resolution: STATIC
  workloadSelector:
    labels:
      app: proxy-engine
